fix: Z-Index conflict between rank and board

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -50,6 +50,7 @@ body {
   aside {
     background: #F9FAFB;
     display: flex;
+    z-index: 100;
 
     .rank {
       display: flex;
@@ -150,6 +151,7 @@ body {
   color: #333;
   font-size: 2em;
   transition: all 0.5s;
+  z-index: 1000;
 
   .board__slide {
     display: flex;
